--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -26,6 +26,7 @@ jobs:
       # ADJUST THIS: install all dependencies (including pdoc)
       - run: pip install -r requirements.txt
       - run: pip install pdoc
+      - run: pip install line_profiler
       - run: pip install -e acoustools/ --config-settings editable_mode=strict
 
       # ADJUST THIS: build your documentation into docs/.
