--- a/acoustools/pyproject.toml
+++ b/acoustools/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "hatchling.build"
 
 [project]
 name = "acoustools"
-dynamic = ["version"]
 description = ''
 readme = "README.md"
 requires-python = ">=3.7"
+version = "1.0.0"
 license = "MIT"
 keywords = []
 authors = [
